syntax = "proto3";

package rss3;

service Rss3 {
  rpc SendMessage (Message) returns (Ack);
}

message Message {
  string from_IP = 1;
  int32 from_PartyID = 2;
  int32 protocol = 3;
  int32 step = 4;
  uint64 share_1half = 5;
  uint64 share_2half = 6;
}

message Ack {
  bool ok = 1;
}



